# rse

./: Cargo.toml  NOTES.md  default.nix  test_build.nix
.reuse/: dep5
cache/: Cargo.toml
cache/src/: lib.rs
playground/: Cargo.toml
playground/src/: registry.rs  subcomms.rs  toy.rs
src/: main.rs  make.rs  registry.rs  script.rs
src/make/: default.nix  template_cli.rs  template_shell.rs
