[package]
name = "rse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
bpaf = { version = "0.9.8", features = ["autocomplete", "docgen", "bright-color", "derive"] }
xshell = "0.2.5"
